kvirc (4:4.0.0~svn3240-1) unstable; urgency=low

  [ Raúl Sánchez Siles ]
  * Fix "kvirc website, upstream 3.4.2" New upstream release. (Closes: #526886)
  * rules:
    - Using Debian pkg-kde-tools kde4.mk
    - Added debhelper.mk
    - Added patchsys-quilt.mk
  * Patches:
    - Removed kubuntu_02_fix_cmakelist_icons.patch. Included upstream.
    - Removed 10_gcc4.3_fix.patch. Included upstream.
    - Removed 17_awaybackaction.patch. Included upstream
    - Removed 20_fixman.patch. Fixed upstream.
  * Copyright:
    - Fixed pointer to GPLv2 in copyright file.
    - More detailed and updated copyright file.
  * Menu:
    - Fixed menu file syntax error.
    - Correctly point to 32x32 icon.
    - Reworked 05_xpmicon.patch to only include 32x32 icons.
  * Bump Standards-Version to 3.8.1. No changes needed.
  * Added DEB_DH_ALWAYS_EXCLUDE
  * Fixed installing files per package paths.
  * Setting back maintainer to Debian KDE Extras Team.
  * Moved desktop file from kvirc-data to kvirc package.
  * Disabled coexistence with kvirc3.
  * Moving manpage from kvirc-data to kvirc package. kvirc replaces kvirc-data
  * Fix "kvirc has circular Depends on kvirc-data". Now kvirc-data suggests 
    kvirc (Closes: #525037)
  * Pointing upstream license path to Debian copyright file.
  * Using shared-mime-info to add filetypes to system mime database.

  [ Kai Wasserbäch ]
  * Synced to upstream's SVN r3240:
    - Including patch from Debian to fix the xterm issue. (Closes: #530311)
    - Fixes »kvirc doesn't obey LC_MESSAGES environment variable«.
      (Closes: #426838)
    - Fixes »kvirc: embedding perl needs PERL_SYS_INIT3()« for real (upstream
      changeset <https://svn.kvirc.de/kvirc/changeset/3023>). (Was bug:
      #495064)
      See README.Debian for a quick note on this.
    - Includes OFTC/irc.debian.org in the standard server list.
    - Refreshed patches.
  * debian/control:
    - Added zlib1g-dev, libssl-dev, libx11-dev and libxrender-dev to