@@ -1,1 +1,2 @@
 usr/share/man/man1/kvirc.1.gz usr/share/man/man1/kvi_make_scriptdist.sh.1.gz
+usr/share/doc/kvirc-data/copyright usr/share/kvirc/4.0/license/COPYING
